Show edges pending conception Small style fixes

--- a/css/edgecreator_wizard.css
+++ b/css/edgecreator_wizard.css
@@ -156,6 +156,10 @@ button#connexion, button#deconnexion {
 	padding-left: 30px;
 }
 
+#wizard-login-form fieldset > div {
+	float: left;
+}
+
 #wizard-images.photo_principale span:not(.ui-button-text):not(.photo_principale),
 #wizard-images.autres_photos span:not(.ui-button-text):not(.autres_photos),
 #wizard-images.photos_texte span:not(.ui-button-text):not(.photos_texte) {
@@ -172,7 +176,8 @@ button#connexion, button#deconnexion {
 	text-align: right;
 }
 
-#wizard-1 #tranches_en_cours {
+#wizard-1 #tranches_en_cours,
+#wizard-1 #tranches_en_attente {
     position: static !important;
 	margin-top: 20px;
 	padding: 15px;
@@ -203,10 +208,10 @@ button#connexion, button#deconnexion {
 	margin-top: 2px;
 }
 
-#tranches_en_cours label.libelle_tranche_en_cours, #tranches_non_pretes label {
+label.libelle_tranche {
 	padding-left: 32px;
-	background-repeat: no-repeat;
-	background-position: 10px;
+	background-repeat: no-repeat !important;
+	background-position: 10px !important;
 }
 
 #tranches_en_cours button.prepublier,
